--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,34 @@
+body {
+  font-family: arial, sans-serif;
+}
+
+.weather-app {
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
+  border: 1px solid rgb(226, 43, 98);
+  border-radius: 5px;
+}
+
 h1 {
-  color: blueviolet;
+  color: rgb(226, 43, 98);
+  font-size: 30px;
+  font-weight: 100;
+  line-height: 28px;
+  margin-bottom: 10;
 }
 
 ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  color: rgb(226, 43, 98);
+  font-size: 14px;
+  font-weight: 80;
+  line-height: 20px;
+  margin: 0;
+  padding: 0;
 }
