--- a/src/app.css
+++ b/src/app.css
@@ -2,12 +2,39 @@ body {
   font-family: arial, sans-serif;
 }
 
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
+
 .weather-app {
   max-width: 600px;
   margin: 30px auto;
   padding: 20px;
   border: 1px solid rgb(226, 43, 98);
   border-radius: 5px;
+}
+
+.overview {
+  margin-bottom: 26px;
+}
+
+.weather-temperature img {
+  margin-right: 10px;
+  height: 64px;
+  margin-top: 1px;
+}
+
+.weather-temperature strong {
+  color: rgba(168, 12, 12, 0.795);
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 1;
+}
+
+.weather-temperature .units {
+  position: relative;
+  top: -14px;
 }
 
 h1 {
