--- a/src/app.css
+++ b/src/app.css
@@ -1,63 +1,67 @@
 body {
   font-family: arial, sans-serif;
+  background-image: linear-gradient(to right, #fa709a 0%, #fee140 100%);
 }
 
 .weather-app-wrapper {
-  max-width: 600px;
+  max-width: 500px;
   margin: 30px auto;
 }
 
 .weather-app {
-  max-width: 600px;
+  max-width: 400px;
   margin: 30px auto;
-  padding: 20px;
-  border: 1px solid rgb(226, 43, 98);
-  border-radius: 5px;
+  padding: 40px;
+  border: 10px solid rgb(226, 43, 98);
+  border-radius: 75px;
 }
 
 .overview {
-  margin-bottom: 26px;
+  margin-bottom: 1px;
 }
 
 .weather-temperature img {
   margin-right: 10px;
-  height: 64px;
-  margin-top: 1px;
+  height: 200px;
 }
 
 .weather-temperature strong {
   color: rgba(168, 12, 12, 0.795);
-  font-size: 40px;
+  font-size: 50px;
   font-weight: 400;
   line-height: 1;
 }
 
 .weather-temperature .units {
-  position: relative;
-  top: -14px;
+  text-align: right;
+  top: -5px;
 }
 
 h1 {
-  color: rgb(226, 43, 98);
-  font-size: 30px;
+  margin: 10px;
+  color: rgb(180, 9, 23);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 45px;
   font-weight: 100;
-  line-height: 28px;
-  margin-bottom: 10;
+  height: 28px;
+  line-height: 30px;
+  text-align: left;
 }
 
 ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+  list-style: none;
+  margin: 30;
+  padding: 20;
+  color: rgb(179, 10, 10);
 }
 
 li {
-  color: rgb(226, 43, 98);
-  font-size: 14px;
-  font-weight: 80;
-  line-height: 20px;
-  margin: 0;
-  padding: 0;
+  color: rgb(135, 135, 135);
+  display: block;
+  font-family: arial, sans-serif;
+  font-size: 16px;
+  font-weight: 100;
+  color: rgb(179, 10, 10);
 }
 
 li:first-letter {
